# rust-maze-generator

./: Cargo.toml
src/: main.rs  maze.rs
