[package]
name = "maze-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = { version = "3.0", features = ["derive"] }

[[bin]]
name = "maze"
path = "src/main.rs"

[lib]
name = "maze"
path = "src/maze.rs"
